chore(hub): rename snapshot api paths
