# internal/hub/server.go
@@ -74,8 +74,8 @@ func NewServer(ctx context.Context, databaseClient database.Client, ethereumClie
 	instance.httpServer.GET("/epochs/distributions/:transaction", instance.hub.GetEpochDistributionHandler)
 	instance.httpServer.GET("/epochs/:node/rewards", instance.hub.GetEpochNodeRewardsHandler)
 
-	instance.httpServer.GET("/snapshot/nodes", instance.hub.GetNodeSnapshots)
-	instance.httpServer.GET("/snapshot/stakers", instance.hub.GetStakeSnapshots)
+	instance.httpServer.GET("/snapshots/nodes", instance.hub.GetNodeSnapshots)
+	instance.httpServer.GET("/snapshots/stakers", instance.hub.GetStakeSnapshots)
 
 	instance.httpServer.GET("/rss/*", instance.hub.GetRSSHubHandler)
 	instance.httpServer.GET("/decentralized/tx/:id", instance.hub.GetActivityHandler)
